Fix subscription controls overflowing when the page width is reduced

--- a/app/static/styles/subscription_pool_elements.css
+++ b/app/static/styles/subscription_pool_elements.css
@@ -9,6 +9,9 @@ a.no-link {
     color: red;
 }
 /****INDEX Page****/
+section#content.c-subscription-pool-element.a-index {
+    min-width: 80em;
+}
 div#subscription-page-controls {
     position: relative;
     width: 95%;
